# HyBiomass

./: .gitignore  .project-root  README.md  pyproject.toml
config/enmap/: enmap_table.yaml
config/filter_select/: filter_select_patches.yaml
config/gedi/: gedi_cube_config.yaml  generate_gedi_rasters.yaml  shots_finder.yaml
config/hansen/: processor.yaml
config/patchify/: patchify_tiles.yaml
configs/: downstream.yaml  eval.yaml
configs/callbacks/: default.yaml  early_stopping.yaml  self_supervised.yaml
configs/data/: enmap_gedi.yaml
configs/hydra/: default.yaml
configs/hydra/launcher/: slurm.yaml
configs/logger/: many_loggers.yaml
configs/model/: regression.yaml
configs/paths/: default.yaml
configs/trainer/: default.yaml
data/statistics/: dofa_mu.npy  dofa_sigma.npy  panopticon_mu.npy  panopticon_sigma.npy
hybiomass/: train.py
hybiomass/backbones/: base.py  dofa_encoder.py  spec_resnet.py  spec_vit.py  spectral_adapter.py
hybiomass/baselines/: unet.py
hybiomass/datamodules/: enmap_gedi.py
hybiomass/dataset_creation/: core.py  enmap.py  finder.py  gedi.py  hansen.py  patchify.py  raster.py  utils.py
hybiomass/datasets/: enmap_gedi.py
hybiomass/decoders/: regression_head.py  upernet.py
hybiomass/models/: pixelwise_regression_module.py
hybiomass/transforms/: normalize.py
hybiomass/utils/: __init__.py  instantiators.py  logging_utils.py
scripts/download/: download_europe_GEDIlv002_L2L4a.sh  download_europe_hansenGFC.sh  download_global_GEDIlv002_L2L4a.sh  download_global_hansenGFC.sh
scripts/filter_patches/: filter_select_patches.py
scripts/patchify/: patchify_enmap_gedi.py
scripts/preprocessing/: append_hansen_to_l2l4a_tables.py  find_gedi_shots.py  generate_gedi_rasters.py  prepare_enmap_tiles_table.py
(+7 files in other folders)
